# axum-react-template

./: .gitignore  README.md  dev.nix
backend/: Cargo.toml  build.rs  reload
backend/src/: main.rs  state.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: test.ts
