[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
serde = "1.0.217"
serde_json = { version = "1.0.135", features = ["std"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["compression-gzip", "fs", "timeout", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
